--- a/edgy/project/feature/template/python/setup.py.j2
+++ b/edgy/project/feature/template/python/setup.py.j2
@@ -35,4 +35,6 @@ setup(
     packages = find_packages(exclude=['ez_setup', 'example', 'test']),
     include_package_data = True,
     install_requires = read('requirements.txt', requirements_filter),
+    url = {{ url | pprint }},
+    download_url = {{ download_url | pprint }}.format(version=version),
 )
