--- a/edgy/project/feature/template/python/package_init.py.j2
+++ b/edgy/project/feature/template/python/package_init.py.j2
@@ -1,5 +1,7 @@
 {% if is_namespace %}
     # this is a namespace package
+    from __future__ import absolute_import
+
     try:
         import pkg_resources
         pkg_resources.declare_namespace(__name__)
