new: now using py.test as the default testing harness, new conventions for test placement inspired from sentry project

--- a/edgy/project/feature/template/python/package_init.py.j2
+++ b/edgy/project/feature/template/python/package_init.py.j2
@@ -8,4 +8,6 @@
     except ImportError:
         import pkgutil
         __path__ = pkgutil.extend_path(__path__, __name__)
+{% else %}
+    from __future__ import absolute_import, print_function, unicode_literals
 {% endif %}
