new: adds support for setuptools entrypoints, better command line, better output, now installs a console script to avoid the ugly python -m syntax (but still supports it)

--- a/edgy/project/feature/template/python/setup.py.j2
+++ b/edgy/project/feature/template/python/setup.py.j2
@@ -40,6 +40,9 @@ setup(
     {% if extras_require -%}
         extras_require = {{ extras_require | pprint }},{{ '\n    ' }}
     {%- endif -%}
+    {% if entry_points -%}
+        entry_points = {{ entry_points | pprint }},{{ '\n    ' }}
+    {%- endif -%}
     url = {{ url | pprint }},
     download_url = {{ download_url | pprint }}.format(version=version),
 )
