adds a tornado app generator, along with minor cosmetic changes

--- a/edgy/project/feature/template/Projectfile.j2
+++ b/edgy/project/feature/template/Projectfile.j2
@@ -10,9 +10,9 @@ download_url = '{{ download_url }}'
 author = '{{ author }}'
 author_email = '{{ author_email }}'
 
-features = {
+enable_features = {
 {%- for feature in features %}
-    '{{ feature }}',{{ ' ' }}
+    '{{ feature }}',
 {%- endfor %}
 }
 
@@ -20,7 +20,7 @@ features = {
 
 install_requires = [
 {%- for req in install_requires %}
-    '{{ req }}',{{ ' ' }}
+    '{{ req }}',
 {%- endfor %}
 ]
 {% endif %}
