pytest feature update, tests refactoring

--- a/edgy/project/feature/template/python/setup.py.j2
+++ b/edgy/project/feature/template/python/setup.py.j2
@@ -10,7 +10,10 @@ def read(filename, flt=None):
         content = f.read().strip()
         return flt(content) if callable(flt) else content
 
-version = read('version.txt')
+try:
+    version = read('version.txt')
+except:
+    version = 'dev'
 
 setup(
     {% for k, v in setup.items() -%}
