add pylint ignore to generated setup.py

--- a/edgy/project/feature/template/python/setup.py.j2
+++ b/edgy/project/feature/template/python/setup.py.j2
@@ -12,7 +12,7 @@ def read(filename, flt=None):
 
 try:
     version = read('version.txt')
-except:
+except:  # pylint: disable=bare-except
     version = 'dev'
 
 setup(
