adds travis and coverragerc to pytest feature, create yapf feature with "make format" makefile target, reformat code with yapf.

--- a/edgy/project/feature/template/console_script/__main__.py.j2
+++ b/edgy/project/feature/template/console_script/__main__.py.j2
@@ -15,7 +15,8 @@ def main(args=None, prog=None):
     args = args or sys.argv[1:]
     prog = prog or sys.argv[0]
 
-    raise NotImplementedError('Project command line interface is up and running, but you should probably add some code now.')
+    raise NotImplementedError(
+        'Project command line interface is up and running, but you should probably add some code now.')
 
 
 if __name__ == '__main__':
