YAPF: Dedent closing bracket.

--- a/edgy/project/feature/template/console_script/__main__.py.j2
+++ b/edgy/project/feature/template/console_script/__main__.py.j2
@@ -16,7 +16,8 @@ def main(args=None, prog=None):
     prog = prog or sys.argv[0]
 
     raise NotImplementedError(
-        'Project command line interface is up and running, but you should probably add some code now.')
+        'Project command line interface is up and running, but you should probably add some code now.'
+    )
 
 
 if __name__ == '__main__':
