Changes FileNotFoundError to OSError so it works correctly under python <3.3 (and especially python2.7)

--- a/edgy/project/feature/template/python/setup.py.j2
+++ b/edgy/project/feature/template/python/setup.py.j2
@@ -27,7 +27,7 @@ except NameError:
 version_ns = {}
 try:
     execfile(os.path.join(root_dir, '{{ setup['name'].replace('.', '/') }}/_version.py'), version_ns)
-except FileNotFoundError:
+except OSError:
     version = 'dev'
 else:
     version = version_ns.get('__version__', 'dev')
