--- a/edgy/project/feature/template/python/setup.py.j2
+++ b/edgy/project/feature/template/python/setup.py.j2
@@ -13,7 +13,7 @@ def read(filename, flt=None):
         with open(filename) as f:
             content = f.read().strip()
             return flt(content) if callable(flt) else content
-    except FileNotFoundError:
+    except OSError:
         return ''
 
 # Py3 compatibility hacks, borrowed from IPython.
