Changes OSError to EnvironmentError when trying to read optional version files.

--- a/edgy/project/feature/template/python/setup.py.j2
+++ b/edgy/project/feature/template/python/setup.py.j2
@@ -13,7 +13,7 @@ def read(filename, flt=None):
         with open(filename) as f:
             content = f.read().strip()
             return flt(content) if callable(flt) else content
-    except OSError:
+    except EnvironmentError:
         return ''
 
 # Py3 compatibility hacks, borrowed from IPython.
@@ -27,7 +27,7 @@ except NameError:
 version_ns = {}
 try:
     execfile(os.path.join(root_dir, '{{ setup['name'].replace('.', '/') }}/_version.py'), version_ns)
-except OSError:
+except EnvironmentError:
     version = 'dev'
 else:
     version = version_ns.get('__version__', 'dev')
