--- a/medikit/feature/template/python/setup.py.j2
+++ b/medikit/feature/template/python/setup.py.j2
@@ -32,7 +32,7 @@ except:
 
 version_ns = {}
 try:
-    execfile(path.join(here, '{{ setup['name'].replace('.', '/') }}/_version.py'), version_ns)
+    execfile(path.join(here, '{{ python.version_file }}'), version_ns)
 except EnvironmentError:
     version = 'dev'
 else:
