Various feature enhancements, medikit becomes less tied to python language.

--- a/medikit/feature/template/python/setup.py.j2
+++ b/medikit/feature/template/python/setup.py.j2
@@ -44,7 +44,9 @@ setup(
     version = version,
     long_description = long_description,
     classifiers = classifiers,
-    packages = find_packages(exclude=['ez_setup', 'example', 'test']),
+    {% if not 'packages' in setup -%}
+        packages = find_packages(exclude=['ez_setup', 'example', 'test']),
+    {%- endif -%}
     include_package_data = True,
     {% if install_requires -%}
         install_requires = {{ install_requires | pprint }},{{ '\n    ' }}
