feat: now use a variable for package name as default as we quite often end up doing it later anyway

--- a/medikit/feature/template/Projectfile.j2
+++ b/medikit/feature/template/Projectfile.j2
@@ -2,9 +2,11 @@
 
 from medikit import require
 
+NAME = '{{ name }}'
+
 with require('python') as python:
     python.setup(
-        name = '{{ name }}',
+        name = NAME,
         description = '{{ description }}',
         license = '{{ license }}',
         url = '{{ url }}',
